Make all inputs emphasized, select network correctly
Change-type: patch
Signed-off-by: Stevche Radevski <stevche@balena.io>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ build: &build
 
     - run: cargo build --release --target=$TARGET
 
-    - run: npm build
+    - run: npm ci
+    - run: npm run build
 
     - run: cross-strip target/$TARGET/release/$BINARY
 
